fixed pieces getting wrong position after grabbing

--- a/src/pages/board/BoardPage.module.scss
+++ b/src/pages/board/BoardPage.module.scss
@@ -1,6 +1,8 @@
 .board-page {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 0;
     margin: 0;
+    height: 100vh;
 }
